--- a/learn-js/package.json
+++ b/learn-js/package.json
@@ -10,11 +10,14 @@
     "@uiw/react-codemirror": "^4.23.6",
     "codemirror": "^6.0.1",
     "howler": "^2.2.4",
+    "monaco-editor": "^0.52.0",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-simple-code-editor": "^0.14.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
